remove index row from test parameters

--- a/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
+++ b/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
@@ -4182,9 +4182,9 @@
     "                        'CaMg_3':test_CaMg_3,\n",
     "                        'CaMg_4':test_CaMg_4,\n",
     "                        'CaMg_5':test_CaMg_5,\n",
-    "                        'CaMg_6':test_CaMg_6,})\n",
+    "                        'CaMg_6':test_CaMg_6})\n",
     "test_df.reset_index(drop=True, inplace=True)\n",
-    "test_df.to_csv('../Output/test_params.csv')\n",
+    "test_df.to_csv('../Output/test_params.csv', index=False)\n",
     "test_df.head()"
    ]
   },
