--- a/Code/Notebooks/Figures.ipynb
+++ b/Code/Notebooks/Figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,9 +410,9 @@
     "lat_formatter = LatitudeFormatter()\n",
     "ax.xaxis.set_major_formatter(lon_formatter)\n",
     "ax.yaxis.set_major_formatter(lat_formatter)\n",
-    "dashed_line = mlines.Line2D([], [], color='black', linestyle=':')\n",
-    "solid_line = mlines.Line2D([], [], color='black', linestyle='-')\n",
-    "ax.legend(handles=[dashed_line,solid_line],labels=['15 Ma shoreline','5 Ma shoreline'])\n",
+    "# dashed_line = mlines.Line2D([], [], color='black', linestyle=':')\n",
+    "# solid_line = mlines.Line2D([], [], color='black', linestyle='-')\n",
+    "# ax.legend(handles=[dashed_line,solid_line],labels=['15 Ma shoreline','5 Ma shoreline'])\n",
     "plt.show()"
    ]
   },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
     "plt.ylim(0,np.max(shoreline_data.Sum_no_Sunda)*1.05)\n",
     "#ax2.get_xaxis().set_ticklabels([])\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../../Manuscript/Figures/Shoreline_Growth.pdf',bbox_to_inche)\n",
+    "plt.savefig('../../Manuscript/Figures/Shoreline_Growth.pdf',bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
